add calendar features

--- a/application/app/src/main/res/values/strings.xml
+++ b/application/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="save">Save</string>
     <string name="new_task">New Task</string>
     <string name="tasks">Tasks</string>
+    <string name="back"><![CDATA[<-]]></string>
+    <string name="forward"><![CDATA[->]]></string>
 </resources>
